// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H2 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 36,
      "lineHeight": 41.4,
    }
  }
>
  "God is most glorified in us when we are most satisfied in Him" ― John Piper
</Text>
`;

exports[`the H2 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "InterUI-Black",
      "fontSize": 36,
      "lineHeight": 41.4,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H2 component should render a loading state 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 6,
      "height": 36,
      "marginVertical": 2.6999999999999993,
      "width": "100%",
    }
  }
/>
`;

exports[`the H2 component should render a loading state with correct positioning (margins) 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 6,
      "height": 36,
      "marginBottom": 25.92,
      "marginTop": 38.88,
      "marginVertical": 2.6999999999999993,
      "width": "100%",
    }
  }
/>
`;

exports[`the H2 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 36,
      "lineHeight": 41.4,
    }
  }
>
  Default H2 text
</Text>
`;

exports[`the H2 component should render with correct padding 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  padded={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 36,
      "lineHeight": 41.4,
      "paddingBottom": 25.92,
      "paddingTop": 38.88,
    }
  }
>
  Padded H2 text
</Text>
`;
